fix(styles): Footer on mobile

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -13,6 +13,10 @@ body {
   @media (max-width: $max-width) {
     padding: 1rem;
   }
+
+  @media (max-width: 640px) {
+    padding: .5rem;
+  }
 }
 
 .hidden {
